# SGUI

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: common.cmake  dependencies.cmake
include/SGUI/: Compose.h  Widget.h
src/: main.cpp
src/core/: alignment.hpp  badge.cc  badge.h  box.cc  box.hpp  button.cc  button.hpp  checkbox.cc  checkbox.h  chip.cc  chip.h  column.cc  column.hpp  compose.h  composition_local.h  context_menu.cc  context_menu.h  dialog.cc  dialog.h  dropdown.cc  dropdown.h  group_box.cc  group_box.h  image.cc  image.h  layout.cc  layout.h  loading_spinner.cc  loading_spinner.h  modifier.cc  modifier.h  modifier.hpp  progress_bar.cc  progress_bar.h  radio_button.cc  radio_button.h  remember.h  remember.hpp  row.cc  row.hpp  (+27 more)
src/utils/: nocopyable.hpp
tests/: test_badge.cpp  test_button.cpp  test_checkbox.cpp  test_chip.cpp  test_composition_local.cpp  test_context_menu.cpp  test_dialog.cpp  test_dropdown.cpp  test_group_box.cpp  test_image.cpp  test_layout.cpp  test_loading_spinner.cpp  test_progress_bar.cpp  test_radio_button.cpp  test_scroll.cpp  test_separator.cpp  test_slider.cpp  test_stepper.cpp  test_tabs.cpp  test_text.cc  test_textfield.cpp  test_toggle.cpp  test_tooltip.cpp
